[gd_scene load_steps=3 format=3 uid="uid://c0o2hd6bkx2yw"]

[ext_resource type="Script" path="res://src/block/block.gd" id="1_v2x8u"]
[ext_resource type="PackedScene" uid="uid://swgu7wlvgbpy" path="res://src/expand container button/expand_container.tscn" id="2_q8jlq"]

[node name="block" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_v2x8u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="expand_container" parent="VBoxContainer" instance=ExtResource("2_q8jlq")]
layout_mode = 2

[node name="lines_margin" type="MarginContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="lines" type="VBoxContainer" parent="VBoxContainer/lines_margin"]
layout_mode = 2

[connection signal="request_expand" from="VBoxContainer/expand_container" to="." method="_on_expand_container_request_expand"]

[editable path="VBoxContainer/expand_container"]
